# everest-models

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: coverage.yml  style.yml  test_ert.yml  test_flow.yml  test_ref_docs.yml  test_resinsight.yml  testing.yml  typing.yml
ci/: testkomodo.sh
ci/jenkins/: Jenkinsfile-komodo  testkomodo.sh
docs/: explanation.md  index.md  tutorials.md
docs/contribute/: contribute.md
docs/contribute/fm_ops_remover/: __init__.py  __main__.py  cli.py  parser.py  tasks.py
docs/explanations/: operations_rework.md  project_structure.md
docs/reference/: doc_schemas.py  hook.md  load_jobs_metadata.py
docs/reference/add_templates/: config.yml  help  reference.md  schema.yml
docs/reference/compute_economics/: config.yml  help  reference.md  schema.yml
docs/reference/drill_date_planner/: config.yml  help  reference.md
docs/reference/drill_planner/: config.yml  help  reference.md  schema.yml
docs/reference/extract_summary_data/: help  reference.md
docs/reference/interpret_well_drill/: help  reference.md
docs/reference/npv/: config.yml  help  reference.md  schema.yml
docs/reference/rf/: help  reference.md
docs/reference/schmerge/: help  reference.md  schema.yml
docs/reference/select_wells/: help  reference.md  schema.yml
docs/reference/shared/: arguments.md  models.md  validators.md
docs/reference/stea/: help  reference.md
docs/reference/strip_dates/: help  reference.md
docs/reference/well_constraints/: config.yml  duration_constraints.yml  help  phase_constraints.yml  rate_constraints.yml  reference.md  schema.yml
docs/reference/well_filter/: help  reference.md  schema.yml
docs/reference/well_swapping/: config.yml  reference.md  well_swapping_config.yml
docs/reference/well_trajectory/: config.yml  help  reference.md  schema.yml
docs/source/: argparse.rst  index.rst
docs/tokens/: how_to_guide.md
forwardmodels/configurations/: MAN_SUM
forwardmodels/scripts/: strip_sum.py
share/: entry_points.yml
share/spinningjenny/forwardmodels/: STEA  add_templates  drill_planner  extract_summary_data  interpret_well_drill  npv  rf  schmerge  strip_dates  well_constraints  well_filter
share/spinningjenny/npv/: npv_defaults.yml
spinningjenny/: __init__.py  customized_logger.py  drill_date_planner_job.py  drill_planner_optimization.py  everest_hooks.py  interpret_well_drill_job.py  npv_job.py  rf_job.py  schmerge_job.py  select_wells_job.py  strip_dates_job.py  strip_sum_job.py  well_filter_job.py
spinningjenny/add_templates/: add_templates_job.py  add_tmpl_schema.py
spinningjenny/drill_planner/: __init__.py  drill_planner_optimization.py  drill_planner_schema.py  drillmodel.py  greedy_drill_planner.py  ormodel.py
spinningjenny/extract_summary_data/: __init__.py
spinningjenny/npv/: npv_config.py  npv_defaults.yml  npv_job.py
spinningjenny/script/: add_templates.py  drill_planner.py  fm_add_templates.py  fm_drill_date_planner.py  fm_drill_planner.py  fm_extract_summary_data.py  fm_interpret_well_drill.py  fm_npv.py  fm_rf.py  fm_schmerge.py  fm_select_wells.py  fm_stea.py  fm_strip_dates.py  fm_well_constraints.py  fm_well_filter.py  interpret_well_drill.py  npv.py  rf.py  schmerge.py  stea_fmu.py  strip_dates.py  strip_sum.py  well_constraints.py
spinningjenny/share/: entry_points.yml
spinningjenny/share/forwardmodels/: add_templates  drill_date_planner  drill_planner  interpret_well_drill  npv  schmerge  select_wells  strip_dates  well_constraints
spinningjenny/well_constraints/: controls_config.py  well_config.py  well_constraint_job.py  well_constraint_validate.py
src/everest_models/: __init__.py  everest_hooks.py  forward_models.py  logger.py
src/everest_models/forward_models/: add_templates  compute_economics  drill_date_planner  drill_planner  interpret_well_drill  npv  rf  schmerge  stea  well_constraints  well_filter  well_swapping
src/everest_models/jobs/: __init__.py
src/jobs/fm_add_templates/: __init__.py  __main__.py  cli.py  parser.py  schemas.py
src/jobs/fm_drill_date_planner/: __init__.py  __main__.py  cli.py  parser.py  tasks.py
src/jobs/fm_drill_planner/: __init__.py  __main__.py  cli.py  drill_planner_schema.py  drillmodel.py  greedy_drill_planner.py  ormodel.py  parser.py
src/jobs/fm_extract_summary_data/: __init__.py  __main__.py  cli.py  parser.py
src/jobs/fm_interpret_well_drill/: __init__.py  __main__.py  cli.py  parser.py
src/jobs/fm_npv/: __init__.py  __main__.py  cli.py  parser.py  (+1 more)
src/spinningjenny/: __init__.py  everest_hooks.py  scripts.py
tests/: __init__.py  conftest.py  sub_testdata.py  summary.py  utils.py
tests/docs/: test_reference_schemas.py
tests/functional/: test_add_templates_entry.py  test_drill_date_planner_entry.py  test_drill_planner_entry.py  test_extract_summary_data.py  test_interpret_well_drill_entry.py  test_npv_entry.py  test_rf_entry.py  test_schmerge_entry.py  test_select_wells_entry.py  test_stea.py  test_strip_dates_entry.py  test_well_constraints_entry.py  test_well_filter_entry.py  test_well_filter_workflow.py
tests/integration/: test_eightcells_simulation.py  test_plugin.py
tests/jobs/: conftest.py
tests/spinningjenny/: test_scripts.py
tests/summary/: __init__.py
tests/unit/: test_add_templates.py  test_drill_date_planner.py  test_drill_planner.py  test_drillmodel.py  test_extract_summary_data.py  test_formatting.py  test_greedy_drill_planner.py  test_interpret_well_drill.py  test_jobs_implementation.py  test_npv.py  test_ormodel.py  test_plugin.py  test_rf.py  test_schmerge.py  test_select_wells.py  test_shared_functions.py  test_strip_dates.py  test_stripsum.py  test_well_constraints.py  test_well_filter.py  test_yaml.py
tests/workflows/: test_stripsum.py  test_well_filter_workflow.py  test_well_swapping_workflow.py  test_workflow.py
workflows/configurations/: MAN_SUM
workflows/scripts/: stripsum.py
(+627 files in other folders)
