# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spinningjenny"
description = "Module containing a collection of jobs for ERT"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="Equinor ASA"},
]
classifiers = [
    "Programming language :: Python",
    "Programming language :: Python :: 3.8",
    "Programming language :: Python :: 3.9",
    "Programming language :: Python :: 3.10",
]
dependencies = [
    "configsuite>=0.6.6",
    "ecl>=2.13.2",
    "Jinja2>=3.1.2",
    "numpy>=1.23.2",
    "ortools==9.2.9972",
    "ruamel.yaml>=0.17.21",
    "stea>=0.5.2",
]
dynamic = [
    "version",
]

[project.urls]
"Repository" = "https://github.com/equinor/spinningjenny"

[project.optional-dependencies]
test = [
    "pytest",
    "decorator",
    "mock",
    "black",
    "hypothesis",
    "pytest-runner",
    "pytest-timeout",
    "isort",
]

[project.entry-points."everest"]
spinningjenny = "spinningjenny.everest_hooks"

[project.scripts]
add_templates = "spinningjenny.jobs.fm_add_templates.cli:main_entry_point"
drill_date_planner = "spinningjenny.jobs.fm_drill_date_planner.cli:main_entry_point"
drill_planner = "spinningjenny.jobs.fm_drill_planner.cli:main_entry_point"
npv = "spinningjenny.jobs.fm_npv.cli:main_entry_point"
extract_summary_data = "spinningjenny.jobs.fm_extract_summary_data.cli:main_entry_point"
interpret_well_drill = "spinningjenny.jobs.fm_interpret_well_drill.cli:main_entry_point"
rf = "spinningjenny.jobs.fm_rf.cli:main_entry_point"
schmerge = "spinningjenny.jobs.fm_schmerge.cli:main_entry_point"
select_wells = "spinningjenny.jobs.fm_select_wells.cli:main_entry_point"
stea = "spinningjenny.jobs.fm_stea.cli:main_entry_point"
strip_dates = "spinningjenny.jobs.fm_strip_dates.cli:main_entry_point"
well_constraints = "spinningjenny.jobs.fm_well_constraints.cli:main_entry_point"
well_filter = "spinningjenny.jobs.fm_well_filter.cli:main_entry_point"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/spinningjenny/version.py"

[tool.setuptools.dynamic]
version = {attr = "spinningjenny.version.__version__"}

[tool.pytest.ini_options]
addopts = "-sv --hypothesis-profile ci"
minversion = "6.0"
required_plugins = "hypothesis"
testpaths = [
    "tests"
]
markers = [
    "slow",
    "sub_dir"
]

log_cli = 0
log_cli_level = "INFO"

[tool.isort]
profile = "black"