# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spinningjenny"
description = "Module containing a collection of jobs for ERT"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="Equinor ASA"},
]
classifiers = [
    "Programming language :: Python",
    "Programming language :: Python :: 3.8",
    "Programming language :: Python :: 3.9",
    "Programming language :: Python :: 3.10",
    "Programming language :: Python :: 3.11",
]
dependencies = [
    "ecl>=2.13.2",
    "Jinja2>=3.1.2",
    "numpy>=1.23.2",
    "ortools>=9.5.2237",
    "ruamel.yaml>=0.17.21",
    "stea>=0.5.2",
    "pydantic < 2",
]
dynamic = [
    "version",
]

[project.urls]
"Repository" = "https://github.com/equinor/spinningjenny"

[project.optional-dependencies]
test = [
    "pytest",
    "decorator",
    "mock",
    "black",
    "hypothesis",
    "pytest-runner",
    "pytest-timeout",
    "isort",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mdx_include",
    "pygments",
    "markdown-mdantic"
]

[project.entry-points."everest"]
spinningjenny = "spinningjenny.everest_hooks"

[project.scripts]
fm_add_templates = "spinningjenny.jobs.fm_add_templates.cli:main_entry_point"
fm_drill_date_planner = "spinningjenny.jobs.fm_drill_date_planner.cli:main_entry_point"
fm_drill_planner = "spinningjenny.jobs.fm_drill_planner.cli:main_entry_point"
fm_npv = "spinningjenny.jobs.fm_npv.cli:main_entry_point"
fm_extract_summary_data = "spinningjenny.jobs.fm_extract_summary_data.cli:main_entry_point"
fm_interpret_well_drill = "spinningjenny.jobs.fm_interpret_well_drill.cli:main_entry_point"
fm_rf = "spinningjenny.jobs.fm_rf.cli:main_entry_point"
fm_schmerge = "spinningjenny.jobs.fm_schmerge.cli:main_entry_point"
fm_select_wells = "spinningjenny.jobs.fm_select_wells.cli:main_entry_point"
fm_stea = "spinningjenny.jobs.fm_stea.cli:main_entry_point"
fm_strip_dates = "spinningjenny.jobs.fm_strip_dates.cli:main_entry_point"
fm_well_constraints = "spinningjenny.jobs.fm_well_constraints.cli:main_entry_point"
fm_well_filter = "spinningjenny.jobs.fm_well_filter.cli:main_entry_point"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/spinningjenny/version.py"

[tool.setuptools.dynamic]
version = {attr = "spinningjenny.version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "hypothesis"
testpaths = [
    "tests"
]
markers = [
    "slow",
]

log_cli = 0
log_cli_level = "INFO"

[tool.isort]
profile = "black"
